# zfz

./: Cargo.toml
src/: console.rs  main.rs  selector.rs  sliding_window.rs  ui.rs
src/console/: nix.rs  win32.rs
src/ui/: ansi.rs  termios.rs  window.rs
