[package]
name = "zfz"
version = "0.1.0"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.65"

[profile.release]
debug = true
